# TackleboxModeling.jl

./: .gitmodules  Project.toml  README.md  TackleboxModeling.jl  generate_pink_noise.jl  generate_training_signal.jl  meson.build  nix-shell.sh  prepare_nam_training_data.sh  run.jl  run_chunks.jl  test_oversampling.jl  write_model_output.jl  write_test_output.jl
data/BrianMay/: model.bson  model.cc  model.nam
data/EVH 5150/: model.bson  model.cc  model.nam
data/Fender Deluxe Reverb/: model.bson  model.cc  model.nam
data/marshall bluesbreaker 1962/: model.bson  model.cc  model.nam
plugin/: meson.build  test_tacklebox.cc
plugin/include/: tacklebox.h
plugin/lv2/tacklebox.lv2/: meson.build  tacklebox.cc  tacklebox.ttl
scratch/: generate_wave_packet.jl  test_convolver.cc
src/: meson.build  test_tacklebox.cc
src/include/: tacklebox.h
src/lv2/: manifest.ttl  meson.build  tacklebox.c  tacklebox.cc  tacklebox.ttl
src/lv2/tacklebox.lv2/: tacklebox.cc  tacklebox.ttl
